[gd_scene load_steps=2 format=3 uid="uid://bv383cdr0ahxq"]

[ext_resource type="Script" uid="uid://cg6nt3e24w4cc" path="res://dialouge_box.gd" id="1_iem86"]

[node name="DialougeBox" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -547.0
offset_top = -564.0
offset_right = -547.0
offset_bottom = -564.0
script = ExtResource("1_iem86")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 489.0
offset_right = 1004.0
offset_bottom = 627.0

[node name="DialogueLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 19.0
offset_top = 45.0
offset_right = 59.0
offset_bottom = 68.0
scale = Vector2(20.3973, 3.89591)

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 29.0
offset_top = 8.0
offset_right = 635.0
offset_bottom = 44.0
uppercase = true

[node name="CharacterSprite" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.018
anchor_top = -0.138
anchor_right = -0.018
anchor_bottom = -0.138
offset_left = 0.408001
offset_top = 0.0440025
offset_right = 0.408001
offset_bottom = 0.0440025
stretch_mode = 5
